@@ -1,8 +1,19 @@
-This is an incomplete port of the scheme shell (scsh) 0.5.2 to Guile.
+This is an incomplete port of the scheme shell, scsh 0.5.2 to Guile.
 
 For the original scsh package and documentation, see:
 
 http://www.swiss.ai.mit.edu/ftpdir/scsh/
+
+Prerequisites for guile-scsh:
+
+SLIB must be available to Guile: see the guile reference manual for
+information on installing SLIB (FIXME: we may be able to do without
+SLIB).
+
+The guilerxspencer module must be installed.  It's available from
+http://arglist.com/guile/
+(FIXME: use modules, so that guilerxspencer is only needed if using
+the scsh regex stuff).
 
 To install the package, use something like:
 
@@ -10,7 +21,10 @@ configure --prefix=/usr/local
 make
 make install
 
-The configure prefix must match the one used for Guile itself.
+See the INSTALL file for more details.
+
+For now, the configure prefix must match the one where Guile is installed.
+(FIXME: use guile-config to find the installation directory).
 
 Alternatively it's sufficient to rename (or link) the main guile-scsh
 directory to "scsh" and place it somewhere in the guile load path (type
@@ -22,12 +36,13 @@ loaded into a running Guile interpreter with:
 
 (load-from-path "scsh/init")
 
-Note that SLIB must be available to Guile: see the guile reference
-manual for information on installing SLIB.
-
 The Guile port uses a record type to represent the multiple values
 returned by many scsh procedures.  The values can be retrieved
-using call-with-values or receive.
+using call-with-values or receive.  FIXME: check modern multiple values
+usage in guile-core.
+
+FIXME: delete the autogenerated files from the repository and remove
+the text below.
 
 Hacking It Yourself ==================================================
 
